--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 				<ul>
 					<li> <a href="index.html"> HOME </a> </li>
-					<li> <a href="blog-one.html" target="_blank"> Learning CSS </a> </li>	
-					<li> <a href="blog-two.html" target="_blank"> Understanding JavaScript </a> </li>	
-					<li> <a href="blog-three.html" target="_blank"> Exploring web Frameworks </a> </li>
+					<li> <a href="Blog-one.html" target="_blank"> Learning CSS </a> </li>	
+					<li> <a href="Blog-two.html" target="_blank"> Understanding JavaScript </a> </li>	
+					<li> <a href="Blog-three.html" target="_blank"> Exploring web Frameworks </a> </li>
 				</ul>
 
 			</nav>
@@ -107,11 +107,11 @@
 		<h4>Related Posts</h4>
 
 				<ul>
-					<li><a href="blog-one.html"> What is CSS?</a></li>
+					<li><a href="Blog-one.html"> What is CSS?</a></li>
 		 			By Sean Mikhael Dela Cruz <br> <br>
-		 			<li> <a href="blog-two.html">What is JavaScript</a></li>
+		 			<li> <a href="Blog-two.html">What is JavaScript</a></li>
 		 			By Sean Mikhael Dela Cruz <br> <br>
-		 			<li> <a href="blog-three.html">What is Framework?</a></li>
+		 			<li> <a href="Blog-three.html">What is Framework?</a></li>
 		 			By Sean Mikhael Dela Cruz
 				</ul>
 	</aside>
@@ -125,3 +125,4 @@
 	</footer>
 
 </html>	
+
